--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "ba4322897de284c3",
+        "id": "ed5557e00dc3c495",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "400 Projects/Vitec Aloc/MicDataUpdater.md",
-            "mode": "source"
+            "file": "000 Home.md",
+            "mode": "preview"
           }
         }
       }
@@ -85,7 +85,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "400 Projects/Vitec Aloc/MicDataUpdater.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -106,8 +105,17 @@
                 "useHierarchy": true
               }
             }
+          },
+          {
+            "id": "e47c047b501417e5",
+            "type": "leaf",
+            "state": {
+              "type": "advanced-tables-toolbar",
+              "state": {}
+            }
           }
-        ]
+        ],
+        "currentTab": 2
       },
       {
         "id": "d293878f7e318d33",
@@ -120,7 +128,6 @@
             "state": {
               "type": "localgraph",
               "state": {
-                "file": "400 Projects/Vitec Aloc/MicDataUpdater.md",
                 "options": {
                   "collapse-filter": true,
                   "search": "",
@@ -131,7 +138,7 @@
                   "showTags": false,
                   "showAttachments": false,
                   "hideUnresolved": false,
-                  "collapse-color-groups": true,
+                  "collapse-color-groups": false,
                   "colorGroups": [
                     {
                       "query": "file:000 Home",
@@ -188,13 +195,6 @@
                         "a": 1,
                         "rgb": 16731582
                       }
-                    },
-                    {
-                      "query": "path:\"400 Projects\"",
-                      "color": {
-                        "a": 1,
-                        "rgb": 2424776
-                      }
                     }
                   ],
                   "collapse-display": true,
@@ -219,17 +219,17 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "ba4322897de284c3",
+  "active": "9ceadde9c337a044",
   "lastOpenFiles": [
-    "000 Daily Notes/26-08-2022.md",
-    "400 Projects/Vitec Aloc/MicDataUpdater.md",
+    "000 Home.md",
+    "conflict-files-obsidian-git.md",
+    "000 Daily Notes/29-07-2022.md",
+    "400 Projects/Personal/Timeline/Timeline.md",
+    "400 Projects/Personal/Timeline/Timeline README.md",
+    "000 Daily Notes/28-07-2022.md",
     "400 Projects/Vitec Aloc/ParameterDiff/ParameterDiff.md",
-    "400 Projects.md",
-    "000 Daily Notes/25-08-2022.md",
-    "000 Daily Notes/24-08-2022.md",
-    "000 Daily Notes/23-08-2022.md",
-    "000 Daily Notes/22-08-2022.md",
-    "000 Daily Notes/21-08-2022.md",
-    "000 Daily Notes/20-08-2022.md"
+    "000 Daily Notes/26-07-2022.md",
+    "000 Daily Notes/25-07-2022.md",
+    "000 Daily Notes/24-07-2022.md"
   ]
 }
